# pulseplex

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  CODEBASE_ANALYSIS.md  Cargo.toml  Cross.toml  Dockerfile.cross  Justfile  LICENSE  README.md  justfile  pulseplex.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  rust.yml
assets/: default_edrums.toml  hue_ca_bundle.pem
assets/fixtures/: generic-rgbw.json  hue-color.json
crates/pulseplex-core/: Cargo.toml
crates/pulseplex-core/src/: engine.rs  fixture.rs  lib.rs
crates/pulseplex-hue/: Cargo.toml
crates/pulseplex-hue/src/: lib.rs  tls.rs
crates/pulseplex-midi/: Cargo.toml
crates/pulseplex-midi/src/: lib.rs
src/: config.rs  doctor.rs  main.rs  setup.rs
