[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PulsePlex <contact@pulseplex.org>"]
edition = "2021"                                # Stick to 2021 for maximum stability

[package]
name = "pulseplex"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
pulseplex-core.workspace = true
tracing.workspace = true
clap = { version = "4.5", features = ["derive"] }
pulseplex-midi = { path = "crates/pulseplex-midi" }
serde = { workspace = true }
spin_sleep = "1.3"
spin_sleep_util = "0.1.1"
toml = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ctrlc = "3.5.2"
notify = "8.2.0"
dialoguer = "0.12.0"
toml_edit = "0.25.8"
ratatui = "0.29.0"
crossterm = "0.28.1"

[workspace.dependencies]
pulseplex-core = { path = "crates/pulseplex-core" }
anyhow = "1.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
