[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["PulsePlex <contact@pulseplex.org>"]
edition = "2021"

[package]
name = "pulseplex"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
pulseplex-core.workspace = true
# Enable streaming by default for the main binary
pulseplex-hue = { workspace = true, default-features = false, features = ["streaming"] }
tracing.workspace = true
clap = { version = "4.5", features = ["derive"] }
pulseplex-midi = { path = "crates/pulseplex-midi" }
serde = { workspace = true }
spin_sleep = "1.3"
spin_sleep_util = "0.1.1"
toml = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ctrlc = "3.5.2"
notify = "8.2.0"
dialoguer = "0.12.0"
toml_edit = "0.25.8"
ratatui = "0.29.0"
crossterm = "0.28.1"
# Force reqwest to use rustls to bypass macOS Security.framework limitations
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
mdns-sd = "0.13"
directories = "6.0"
# Add 'time' feature for timeouts and sleeps
tokio = { version = "1.43", features = ["rt", "macros", "time"] }
serde_json = "1.0"
tracing-appender = "0.2"
semver = "1.0"
rustls = { workspace = true }
rustls-pemfile = "2.1"
rustls-pki_types = { version = "1.10", package = "rustls-pki-types" }

[workspace.dependencies]
pulseplex-core = { path = "crates/pulseplex-core" }
pulseplex-hue = { path = "crates/pulseplex-hue", default-features = false }
anyhow = "1.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0"
tracing = "0.1"
# Global rustls lock: explicitly enable ring provider for consistency
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
