[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["PulsePlex <contact@pulseplex.net>"]
edition = "2021"
description = "A high-performance, real-time MIDI-to-Art-Net/Hue lighting orchestration engine"
license = "MIT"
repository = "https://github.com/jim-miller/pulseplex"

[package]
name = "pulseplex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
pulseplex-core.workspace = true
# Enable streaming by default for the main binary
pulseplex-hue = { workspace = true, default-features = false, features = ["streaming"] }
pulseplex-midi.workspace = true

serde.workspace = true
toml.workspace = true
tracing.workspace = true
rustls.workspace = true

clap = { version = "4.5", features = ["derive"] }
spin_sleep = "1.3"
spin_sleep_util = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ctrlc = "3.5.2"
notify = "8.2.0"
dialoguer = "0.12.0"
toml_edit = "0.25.8"
ratatui = "0.30.0"
crossterm = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
mdns-sd = "0.14"
directories = "6.0"
tokio = { version = "1.43", features = ["rt", "macros", "time"] }
serde_json = "1.0"
tracing-appender = "0.2"
semver = "1.0"
rustls-pemfile = "2.1"
rustls-pki_types = { version = "1.10", package = "rustls-pki-types" }

[workspace.dependencies]
pulseplex-core = { path = "crates/pulseplex-core", version = "=0.1.1" }
pulseplex-hue = { path = "crates/pulseplex-hue", version = "=0.1.1", default-features = false }
pulseplex-midi = { path = "crates/pulseplex-midi", version = "=0.1.1" }

anyhow = "1.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.0"
tracing = "0.1"
# Global rustls lock: explicitly enable ring provider for consistency
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
