[package]
name = "pulseplex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["macros", "rt"] }
